# multiplayer-games

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml  wrangler.jsonc
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-games-dev.yml  deploy-games-prod.yml  deploy-games.yml  deploy-web-dev.yml  deploy-web-prod.yml  deploy-web.yml
crates/engine/: Cargo.toml
crates/engine/src/: assets.rs  collision.rs  gfx.rs  host.rs  input.rs  lib.rs  movement.rs  net.rs  types.rs
crates/games/demo/: Cargo.toml
crates/games/demo/src/: main.rs
crates/games/pacman/: Cargo.toml
crates/games/pacman/src/: main.rs
crates/games/snake/: Cargo.toml
crates/games/snake/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: protocol.rs
deploy/: Caddyfile
docs/: deployment.md
web/: .dockerignore  .env.example  Dockerfile  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/games/_shared/: host.js  index.html
web/scripts/: build-games.mjs
web/src/: App.vue  main.ts  style.css
web/src/components/: GameCard.vue  GameFrame.vue  GameStats.vue  PacmanGame.vue  SnakeGame.vue
web/src/data/: games.test.ts  games.ts
web/src/router/: index.ts
web/src/stores/: game.test.ts  game.ts
web/src/types/: protocol.ts
web/src/views/: DemoView.vue  HomeView.vue  NotFoundView.vue  PlayView.vue
